flapivor/tests/m3/hopix/typechecker/bad/71-anonymous-function.hopix
val id : Int -> Int = (fun (x) => "Bar" : Int -> Int)